# company_project

./: pyproject.toml
src/company_project/: database.py  main.py  model.py
