[project]
name = "company-project"
version = "0.1.0"
description = ""
authors = [
    {name = "ujjwal",email = "ujjvaltyagi18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "pymysql (>=1.1.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "company_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
